# vtkDataSetReaders

./: CMakeLists.txt  README.md  geoJSONReader.cpp  geoJSONReader.h  geoJSONReaderFeatures.cpp  geoJSONReaderFeatures.h  main.cpp  sample.json  vtkGeoJSONFeature.cxx  vtkGeoJSONFeature.h  vtkGeoJSONReader.h  vtkLASReader.cxx  vtkLASReader.h  vtkPostGISQuery.cxx  vtkPostGISQuery.h  vtkgeojsonfeature.cpp  vtkgeojsonfeature.h  vtkgeojsonreader.cpp  vtkgeojsonreader.h
Testing/: CMakeLists.txt  TestGeoJSON.cxx
Testing/Data/: ny-points.geojson  ny-points.schema.json
